--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/francisco-j/adopta-un-perro#readme",
   "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.7.7",
     "pug": "^2.0.4"
   }
 }
