--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node ./index"
+    "prod": "node ./index",
+    "dev": "nodemon ./index"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.7.7",
+    "nodemon": "^1.19.4",
     "pug": "^2.0.4"
   }
 }
