--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/francisco-j/adopta-un-perro#readme",
   "dependencies": {
+    "ejs": "^2.7.1",
     "express": "^4.17.1",
     "mongoose": "^5.7.7",
     "nodemon": "^1.19.4",
